TP4_Corrected/generated/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement ; programme
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> PRINT expression
Rule 6     structure -> WHILE expression { programme }
Rule 7     expression -> expression ADD_OP expression
Rule 8     expression -> expression MUL_OP expression
Rule 9     expression -> NUMBER
Rule 10    expression -> IDENTIFIER
Rule 11    expression -> ( expression )
Rule 12    expression -> ADD_OP expression
Rule 13    assignation -> IDENTIFIER = expression

Terminals, with rules where they appear

(                    : 11
)                    : 11
;                    : 2
=                    : 13
ADD_OP               : 7 12
IDENTIFIER           : 10 13
MUL_OP               : 8
NUMBER               : 9
PRINT                : 5
WHILE                : 6
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignation          : 3
expression           : 5 6 7 7 8 8 11 12 13
programme            : 2 6 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (13) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3

    structure                      shift and go to state 4
    statement                      shift and go to state 1
    programme                      shift and go to state 2
    assignation                    shift and go to state 6

state 1

    (1) programme -> statement .
    (2) programme -> statement . ; programme

    $end            reduce using rule 1 (programme -> statement .)
    }               reduce using rule 1 (programme -> statement .)
    ;               shift and go to state 8


state 2

    (0) S' -> programme .



state 3

    (6) structure -> WHILE . expression { programme }
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 13

state 4

    (4) statement -> structure .

    ;               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)


state 5

    (5) statement -> PRINT . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 14

state 6

    (3) statement -> assignation .

    ;               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)


state 7

    (13) assignation -> IDENTIFIER . = expression

    =               shift and go to state 15


state 8

    (2) programme -> statement ; . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (13) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3

    structure                      shift and go to state 4
    statement                      shift and go to state 1
    programme                      shift and go to state 16
    assignation                    shift and go to state 6

state 9

    (9) expression -> NUMBER .

    ADD_OP          reduce using rule 9 (expression -> NUMBER .)
    MUL_OP          reduce using rule 9 (expression -> NUMBER .)
    {               reduce using rule 9 (expression -> NUMBER .)
    ;               reduce using rule 9 (expression -> NUMBER .)
    $end            reduce using rule 9 (expression -> NUMBER .)
    }               reduce using rule 9 (expression -> NUMBER .)
    )               reduce using rule 9 (expression -> NUMBER .)


state 10

    (12) expression -> ADD_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 17

state 11

    (11) expression -> ( . expression )
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 18

state 12

    (10) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 10 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 10 (expression -> IDENTIFIER .)
    {               reduce using rule 10 (expression -> IDENTIFIER .)
    ;               reduce using rule 10 (expression -> IDENTIFIER .)
    $end            reduce using rule 10 (expression -> IDENTIFIER .)
    }               reduce using rule 10 (expression -> IDENTIFIER .)
    )               reduce using rule 10 (expression -> IDENTIFIER .)


state 13

    (6) structure -> WHILE expression . { programme }
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    {               shift and go to state 19
    ADD_OP          shift and go to state 20
    MUL_OP          shift and go to state 21


state 14

    (5) statement -> PRINT expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ;               reduce using rule 5 (statement -> PRINT expression .)
    $end            reduce using rule 5 (statement -> PRINT expression .)
    }               reduce using rule 5 (statement -> PRINT expression .)
    ADD_OP          shift and go to state 20
    MUL_OP          shift and go to state 21


state 15

    (13) assignation -> IDENTIFIER = . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 22

state 16

    (2) programme -> statement ; programme .

    $end            reduce using rule 2 (programme -> statement ; programme .)
    }               reduce using rule 2 (programme -> statement ; programme .)


state 17

    (12) expression -> ADD_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 12 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 12 (expression -> ADD_OP expression .)
    {               reduce using rule 12 (expression -> ADD_OP expression .)
    ;               reduce using rule 12 (expression -> ADD_OP expression .)
    $end            reduce using rule 12 (expression -> ADD_OP expression .)
    }               reduce using rule 12 (expression -> ADD_OP expression .)
    )               reduce using rule 12 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 20 ]
  ! MUL_OP          [ shift and go to state 21 ]


state 18

    (11) expression -> ( expression . )
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    )               shift and go to state 23
    ADD_OP          shift and go to state 20
    MUL_OP          shift and go to state 21


state 19

    (6) structure -> WHILE expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (13) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }

    PRINT           shift and go to state 5
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3

    structure                      shift and go to state 4
    statement                      shift and go to state 1
    programme                      shift and go to state 24
    assignation                    shift and go to state 6

state 20

    (7) expression -> expression ADD_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 25

state 21

    (8) expression -> expression MUL_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER
    (10) expression -> . IDENTIFIER
    (11) expression -> . ( expression )
    (12) expression -> . ADD_OP expression

    NUMBER          shift and go to state 9
    IDENTIFIER      shift and go to state 12
    (               shift and go to state 11
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 26

state 22

    (13) assignation -> IDENTIFIER = expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ;               reduce using rule 13 (assignation -> IDENTIFIER = expression .)
    $end            reduce using rule 13 (assignation -> IDENTIFIER = expression .)
    }               reduce using rule 13 (assignation -> IDENTIFIER = expression .)
    ADD_OP          shift and go to state 20
    MUL_OP          shift and go to state 21


state 23

    (11) expression -> ( expression ) .

    ADD_OP          reduce using rule 11 (expression -> ( expression ) .)
    MUL_OP          reduce using rule 11 (expression -> ( expression ) .)
    {               reduce using rule 11 (expression -> ( expression ) .)
    ;               reduce using rule 11 (expression -> ( expression ) .)
    $end            reduce using rule 11 (expression -> ( expression ) .)
    }               reduce using rule 11 (expression -> ( expression ) .)
    )               reduce using rule 11 (expression -> ( expression ) .)


state 24

    (6) structure -> WHILE expression { programme . }

    }               shift and go to state 27


state 25

    (7) expression -> expression ADD_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 7 (expression -> expression ADD_OP expression .)
    {               reduce using rule 7 (expression -> expression ADD_OP expression .)
    ;               reduce using rule 7 (expression -> expression ADD_OP expression .)
    $end            reduce using rule 7 (expression -> expression ADD_OP expression .)
    }               reduce using rule 7 (expression -> expression ADD_OP expression .)
    )               reduce using rule 7 (expression -> expression ADD_OP expression .)
    MUL_OP          shift and go to state 21

  ! MUL_OP          [ reduce using rule 7 (expression -> expression ADD_OP expression .) ]
  ! ADD_OP          [ shift and go to state 20 ]


state 26

    (8) expression -> expression MUL_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 8 (expression -> expression MUL_OP expression .)
    MUL_OP          reduce using rule 8 (expression -> expression MUL_OP expression .)
    {               reduce using rule 8 (expression -> expression MUL_OP expression .)
    ;               reduce using rule 8 (expression -> expression MUL_OP expression .)
    $end            reduce using rule 8 (expression -> expression MUL_OP expression .)
    }               reduce using rule 8 (expression -> expression MUL_OP expression .)
    )               reduce using rule 8 (expression -> expression MUL_OP expression .)

  ! ADD_OP          [ shift and go to state 20 ]
  ! MUL_OP          [ shift and go to state 21 ]


state 27

    (6) structure -> WHILE expression { programme } .

    ;               reduce using rule 6 (structure -> WHILE expression { programme } .)
    $end            reduce using rule 6 (structure -> WHILE expression { programme } .)
    }               reduce using rule 6 (structure -> WHILE expression { programme } .)

